enable color mode in PDF

--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -122,7 +122,8 @@
     hangfigurecaption=false,%
     hangsection=true,%
     hangsubsection=true,%
-    colorize=full,%
+    % colorize=full,%
+    colorize=bw,%
     colortheme=jgured,%
     % bibsys=bibtex,%
     % bibfile=bib-refs,%
