--- a/preamble.tex
+++ b/preamble.tex
@@ -61,8 +61,8 @@
     hangfigurecaption=false,%
     hangsection=true,%
     hangsubsection=true,%
-    % colorize=full,%
-    colorize=bw,%
+    colorize=full,%
+    % colorize=bw,%
     colortheme=jgured,%
     % bibsys=bibtex,%
     % bibfile=bib-refs,%
